--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,8 @@ Type: Package
 Title: Custom Utility Functions
 Version: 0.1
 Date: 2015-12-22
-Author: Henri Ménager
-Maintainer: Henri Ménager <hmenager@hotmail.com>
+Author: Henri Menager
+Maintainer: Henri Menager <hmenager@hotmail.com>
 Description: This package contains utility functions that are not found in
     commonly used packages.
 License: GPL-3
